feat(bookmarks-api): PUT /bookmark-folders/{id} to rename a folder
